--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
   </div>
   <nav>
     <ul>
-      <a href="home.html">Work</a>
+      <a href="index.html">Work</a>
       <a href="about.html">About</a>
       <a href="mailto:pedrotrivinofabro@gmail.com">Contact</a>
     </ul>
