--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ header {
 main {
   flex: 1; /* Ocupa todo el espacio disponible entre header y footer */
   overflow: auto; /* Permite scroll si es necesario */
+  
 }
 
 /* Cabecera y Navegación */
@@ -68,6 +69,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
 
 .gallery-item img {
   width: 100%;
@@ -101,6 +103,7 @@ main {
 .image-container {
   height: 540px;
   overflow: hidden;
+
 }
 
 .image-container img {
@@ -126,20 +129,26 @@ main {
 }
 
 /* Estilos para la sección de créditos */
+/* Estilos para la sección de créditos */
 .credits-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
+  gap: 1rem; /* Espacio entre las columnas */
 }
 
 .credit-column {
   display: flex;
   flex-direction: column;
+  padding-top: 1rem;
 }
 
 .credit-column p {
   margin: 0;
   padding: 2px 0;
+  font-family: 'OTNeueMontreal-ItalicSqueezed', sans-serif;
+  line-height: 1rem;
 }
+
 
 /* Fondo para la imagen de sello */
 .background-image-sello {
@@ -374,11 +383,6 @@ main {
   }
 }
 
-body {
-  cursor: url('../images/cursor-mickie.png'), auto;
-}
-
-
 
 
 /* Banda blanca en el header */
@@ -392,7 +396,7 @@ header {
 
 /* Logo a la izquierda */
 .logo {
-  height: 80px;  /* Ajusta el tamaño del logo */
+  height: 130px;  /* Ajusta el tamaño del logo */
   width: auto;   /* Mantiene las proporciones de la imagen */
   object-fit: contain; /* Asegura que el logo no se recorte ni se deforme */
 }
@@ -405,17 +409,21 @@ header {
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: -0.2rem; /* Separación entre las letras */
+  letter-spacing: -0.1rem; 
+  padding: 2.5rem 2rem;
+
 }
 
 /* Estilo de los enlaces */
 .header-font a {
   font-family: 'OTNeueMontreal-SemiBoldUltraSqueezed', sans-serif; /* Tipografía personalizada */
-  font-size: 8rem; /* Ajusta el tamaño de las letras */
+  font-size: 11rem; /* Ajusta el tamaño de las letras */
   text-decoration: none; /* Quita el subrayado */
   color: red; /* Color de las letras */
-  margin-left: 19rem; /* Espacio entre los enlaces */
-  justify-content: flex-start
+  margin-left: 3.9rem; /* Espacio entre los enlaces */
+  justify-content: flex-start;
+  line-height: 1rem;
+  
 }
 
 /* Estilo para las imágenes dentro del logo */
@@ -442,7 +450,7 @@ footer {
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: 0.3rem; /* Separación entre las letras */
+  letter-spacing: 0.0rem; /* Separación entre las letras */
 }
 
 .foot2 a{
@@ -452,20 +460,23 @@ footer {
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: 0.1rem; /* Separación entre las letras */
+  letter-spacing: 0.0rem; /* Separación entre las letras */
   margin: 0; /* Elimina los márgenes del contenedor */
   padding: 0; /* Elimina el relleno del contenedor */
   line-height: 1; /* Reduce la altura de línea para evitar espacios extra */
+  text-decoration: none;
+  margin-left: 0.5rem;
+  
 }
 
 .foot1  {
   font-family: 'OTNeueMontreal-ItalicSqueezed', sans-serif; /* Tipografía personalizada */
-  font-size: 1.5rem; /* Ajusta el tamaño de las letras */
+  font-size: 1.8rem; /* Ajusta el tamaño de las letras */
   color: red; /* Color de las letras */
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: 0.3rem; /* Separación entre las letras */
+  letter-spacing: -0.0rem; /* Separación entre las letras */
   width: 80%; /* Ancho reducido */
   max-width: 600px; /* Opcional: define un máximo para pantallas grandes */
 }
@@ -477,7 +488,7 @@ footer {
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: 0.1rem; /* Separación entre las letras */
+  letter-spacing: -0.0rem; /* Separación entre las letras */
   padding-left: 1rem; /* Espacio desde el borde izquierdo */
   width: 80%; /* Ancho reducido */
   max-width: 600px; /* Opcional: define un máximo para pantallas grandes */
@@ -491,11 +502,15 @@ footer {
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
   justify-content: flex-start; /* Alinea el texto a la derecha */
-  letter-spacing: 0.1rem; /* Separación entre las letras */
+  letter-spacing: 0.0rem; /* Separación entre las letras */
   position: relative; /* Posicionamiento relativo */
   top: -90px; /* Sube el div3 para invadir div2 */
   z-index: 2; /* Asegúrate de que esté por encima de div2 */
+  left: -20px;
+
 }
+
+
 
 
 .left-group {
@@ -505,10 +520,12 @@ footer {
   justify-content: right; /* Centra verticalmente los elementos dentro del contenedor */
   gap: 2rem; /* Espacio entre la imagen y el texto "MAD/BCN/CDMX" */
   padding-left: 50rem;
+ 
 
   position: relative; /* Añadimos position relative para que top funcione */
   top: -90px; /* Sube el grupo para invadir otro elemento */
   z-index: 2; /* Asegúrate de que esté por encima de otros elementos */
+  
 }
 
 .left-group img {
@@ -519,6 +536,7 @@ footer {
   position: relative; /* Añadimos position para que top funcione */
   top: -70px; /* Ajusta la posición del logo específico */
   z-index: 2; /* Asegúrate de que esté por encima de otros elementos */
+  left: -20px
 }
 
 
@@ -528,8 +546,10 @@ body {
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
-  cursor: url('images/cursor-mickie.png') 16 16, auto;
+  cursor: url('images/cursor.cur'), auto;
+
 }
+
 
 /* Títulos de las secciones */
 h2, h3, h4 {
@@ -546,7 +566,7 @@ p {
 
 .p-p {
   font-family: 'OTNeueMontreal-MediumSqueezed', sans-serif; /* Tipografía personalizada */
-  font-size: 2rem; /* Ajusta el tamaño de las letras */
+  font-size: 2.2rem; /* Ajusta el tamaño de las letras */
   color: red; /* Color de las letras */
   display: flex;
   align-items: center; /* Centra las letras verticalmente */
@@ -582,114 +602,106 @@ p {
   letter-spacing: -0.1rem; /* Ajusta la separación entre letras (puedes cambiar el valor según lo necesites) */
   width: fit-content; /* Ajusta el contenedor al contenido del texto */
   line-height: 2.2rem;
+  padding-top: 0.5rem;
 }
 
 
 
-.textillo {
-  font-family: 'OTNeueMontreal-MediumSqueezed', sans-serif; /* Tipografía personalizada */
-  font-size: 3rem; /* Ajusta el tamaño de las letras */
-  color: red; /* Color de las letras */
-  display: flex;
-  align-items: center; /* Centra las letras verticalmente */
-  justify-content: flex-start; /* Alinea el texto a la izquierda */
-  letter-spacing: 0.0rem; /* Separación entre las letras */
-  line-height: 1.8rem; /* Ajusta el interlineado (puedes experimentar con este valor) */
-  
-}
 
 
-@media (max-width: 768px) {
+
+/* @media (max-width: 768px) {
   header {
-    flex-wrap: wrap; /* Permite que los elementos se ajusten al ancho disponible */
-    justify-content: center; /* Asegura que el contenido esté centrado */
-    overflow: hidden; /* Evita que el contenido se desborde */
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
   }
 
   .logo {
-    height: 50px; /* Ajusta la altura del logo en pantallas más pequeñas */
-    margin-right: auto; /* Mantiene el logo alineado a la izquierda */
+    height: 50px;
+    margin-right: auto;
   }
 
   .header-font {
-    font-size: 0.5rem; /* Reduce el tamaño de la fuente en la versión móvil */
-    text-align: center; /* Asegura que el texto esté centrado */
-    margin-left: 0; /* Elimina márgenes adicionales */
-    letter-spacing: -0.1rem; /* Reduce el espaciado de las letras */
+    font-size: 0.5rem;
+    text-align: center;
+    margin-left: 0;
+    letter-spacing: -0.1rem;
   }
 
   .header-font a {
-    font-size: 3.8rem; /* Ajusta el tamaño de los enlaces */
-    margin-left: 2.5rem; /* Reduce el espacio entre enlaces */
+    font-size: 3.8rem;
+    margin-left: 2.5rem;
     line-height: 1rem;
   }
 }
 
 @media (max-width: 768px) {
   footer {
-    height: auto; /* Ajusta la altura del footer según su contenido */
-    padding: 1rem; /* Mantiene el padding alrededor */
-    color: #dc2626; /* Color de las letras */
-    text-align: center; /* Centra el texto dentro del footer */
-    letter-spacing: -0.1rem; /* Reduce el espaciado de las letras */
+    height: auto;
+    padding: 1rem;
+    color: #dc2626;
+    text-align: center;
+    letter-spacing: -0.1rem;
     line-height: 1rem;
   }
 
   .foot1, .foot2, .foot3 {
-    width: 100%; /* Elimina los anchos fijos y hace que los elementos ocupen todo el ancho disponible */
-    max-width: none; /* Elimina el límite de ancho máximo */
-    display: flex; /* Utiliza flexbox para centrar los contenidos */
-    flex-direction: column; /* Alinea los elementos verticalmente */
-    align-items: center; /* Centra los elementos horizontalmente */
-    justify-content: center; /* Centra los elementos verticalmente */
-    margin: 0.5rem 0; /* Espacio entre los elementos */
-    letter-spacing: -0.1rem; /* Reduce el espaciado de las letras */
+    width: 100%;
+    max-width: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem 0;
+    letter-spacing: -0.1rem;
     line-height: 1rem;
   }
 
   .foot1 a, .foot2 a, .foot3 a {
-    font-size: 1.2rem; /* Ajusta el tamaño de la fuente para que se vea bien en móvil */
-    letter-spacing: 0.1rem; /* Ajusta la separación entre las letras */
-    display: block; /* Hace que los enlaces ocupen el ancho completo */
-    margin: 0.5rem 0; /* Añade un pequeño margen entre los enlaces */
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    display: block;
+    margin: 0.5rem 0;
     line-height: 1rem;
   }
 
   .foot1 {
-    font-size: 1.5rem; /* Ajusta el tamaño del texto */
-    letter-spacing: 0.2rem; /* Ajusta la separación entre letras */
-    padding-left: 0; /* Elimina el relleno izquierdo */
+    font-size: 1.5rem;
+    letter-spacing: 0.2rem;
+    padding-left: 0;
   }
 
   .foot2 {
-    font-size: 1.2rem; /* Ajusta el tamaño del texto */
-    padding-left: 0; /* Elimina el relleno izquierdo */
+    font-size: 1.2rem;
+    padding-left: 0;
   }
 
   .foot3 {
-    font-size: 1.8rem; /* Ajusta el tamaño del texto */
-    position: relative; /* Asegura que el posicionamiento relativo funcione bien en móvil */
-    top: 0; /* Elimina el desplazamiento hacia arriba */
-    z-index: 1; /* Ajusta el orden de apilamiento */
+    font-size: 1.8rem;
+    position: relative;
+    top: 0;
+    z-index: 1;
   }
 
   .left-group {
     display: flex;
-    flex-direction: column; /* Alinea los elementos verticalmente */
-    align-items: center; /* Centra los elementos horizontalmente */
-    justify-content: center; /* Centra los elementos verticalmente */
-    gap: 1rem; /* Espacio entre los elementos */
-    margin-top: 1rem; /* Añade un margen superior */
-    padding-left: 0; /* Elimina el relleno izquierdo */
-    letter-spacing: 0.1rem; /* Reduce el espaciado de las letras */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+    padding-left: 0;
+    letter-spacing: 0.1rem;
     line-height: 1rem;
   }
 
   .left-group img {
-    height: 70px; /* Ajusta el tamaño del logo */
-    width: auto; /* Mantiene las proporciones */
-    object-fit: contain; /* Mantiene la proporción del logo */
-    top: 0; /* Elimina el desplazamiento */
+    height: 70px;
+    width: auto;
+    object-fit: contain;
+    top: 0;
   }
-}
+} */
+
 
